added new app.js file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Struggle Ent.</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="//connect.soundcloud.com/sdk.js"></script>
+	<script src="app.js"></script>
 </head>
 <body>
 	<header>
@@ -87,12 +90,10 @@
 		<img src="images/cat_5-1.jpg">
 	</div>
 	
-	<div class="hot">
+	<div id="hot">
 		<p><h2 class="title">What are we listening to?</h2></p>
 	</div>
 	
-	<div class="social">
-		<p><h2 class="title">Social Media</h2></p>
-	</div>
+	
 </body>
 </html>
