Working soundcloud widget

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Struggle Ent.</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="//connect.soundcloud.com/sdk.js"></script>
+	<script src="http://connect.soundcloud.com/sdk.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
@@ -90,8 +90,9 @@
 		<img src="images/cat_5-1.jpg">
 	</div>
 	
-	<div id="hot">
+	<div class="hot">
 		<p><h2 class="title">What are we listening to?</h2></p>
+		<div id="displayMusic"></div>
 	</div>
 	
 	
